// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App lifecycle > install app > should not delete an existing app-data folder even if the app is reinstalled 1`] = `
{
  "/app-data/test/test2/app.env": "ROOT_FOLDER_HOST=/opt/ci-hub
NODE_ENV=production
DOMAIN=ci.test
LOCAL_DOMAIN=ci.lan
APP_PORT=3545
APP_URN=test2:test
APP_ID=test2-test
APP_NAME=test2
APP_STORE_ID=test
APP_DATA_DIR=/opt/ci-hub/app-data/test/test2
APP_IMAGE_TAG=1.0.0
APP_HOSTNAME=127.0.0.1
APP_INTERNAL_AUTHORITY=127.0.0.1:3545
APP_EXPOSED=false
APP_SCHEME=http
APP_PROTOCOL=http
APP_HOST=127.0.0.1
APP_DOMAIN=127.0.0.1:3545
APP_URL=http://127.0.0.1:3545
APP_BASE_URL=http://127.0.0.1:3545
APP_BASE_HOST=127.0.0.1:3545
APP_BASE_WSS_ORIGIN=ws://127.0.0.1:3545
HUB_INFERENCE_URL=http://ci-hub:3000/api/inference/v1
",
  "/app-data/test/test2/data/test.txt": "test",
  "/data/.env": "ROOT_FOLDER_HOST=/opt/ci-hub",
  "/data/apps/test/test2/config.json": "{
  "id": "test2",
  "urn": "test2:test",
  "available": true,
  "deprecated": false,
  "port": 3545,
  "name": "test2 app",
  "description": "Description for test2",
  "version": "1.0.0",
  "cihub_app_version": 1,
  "short_desc": "Short description for test2",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/test2",
  "website": "https://test2.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/apps/test/test2/data": null,
  "/data/apps/test/test2/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "test2",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/apps/test/test2/docker-compose.yml": "services:
  test2:
    image: nginx:latest
    restart: unless-stopped
    networks:
      test2_test_network:
        gw_priority: 0
      ci-hub_network:
        gw_priority: 1
      ci-os-hub_network:
        gw_priority: 0
    environment:
      TEST: test
    ports:
      - \${APP_PORT}:80
    labels:
      ci-hub.managed: true
      ci-hub.appurn: test2:test
      ci-os-hub.managed: true
      ci-os-hub.appurn: test2:test
    env_file:
      - /app-data/test/test2/app.env
networks:
  ci-hub_network:
    name: ci-hub_network
    external: true
  ci-os-hub_network:
    name: ci-os-hub_network
    external: true
  test2_test_network:
    name: test2_test_network
    external: false
    ipam:
      config:
        - subnet: 10.128.X.0/24

",
  "/data/apps/test/test2/metadata/description.md": "test",
  "/data/backups": null,
  "/data/repos/test/apps/test2/config.json": "{
  "id": "test2",
  "urn": "test2:test",
  "available": true,
  "deprecated": false,
  "port": 3545,
  "name": "test2 app",
  "description": "Description for test2",
  "version": "1.0.0",
  "cihub_app_version": 1,
  "short_desc": "Short description for test2",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/test2",
  "website": "https://test2.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/repos/test/apps/test2/data": null,
  "/data/repos/test/apps/test2/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "test2",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/repos/test/apps/test2/metadata/description.md": "test",
  "/data/state/seed": "seed",
}
`;

exports[`App lifecycle > install app > should successfully install app and create expected directory structure 1`] = `
{
  "/app-data/test/test/app.env": "ROOT_FOLDER_HOST=/opt/ci-hub
NODE_ENV=production
DOMAIN=ci.test
LOCAL_DOMAIN=ci.lan
APP_PORT=5145
APP_URN=test:test
APP_ID=test-test
APP_NAME=test
APP_STORE_ID=test
APP_DATA_DIR=/opt/ci-hub/app-data/test/test
APP_IMAGE_TAG=1.0.0
APP_HOSTNAME=127.0.0.1
APP_INTERNAL_AUTHORITY=127.0.0.1:5145
APP_EXPOSED=false
APP_SCHEME=http
APP_PROTOCOL=http
APP_HOST=127.0.0.1
APP_DOMAIN=127.0.0.1:5145
APP_URL=http://127.0.0.1:5145
APP_BASE_URL=http://127.0.0.1:5145
APP_BASE_HOST=127.0.0.1:5145
APP_BASE_WSS_ORIGIN=ws://127.0.0.1:5145
HUB_INFERENCE_URL=http://ci-hub:3000/api/inference/v1
",
  "/app-data/test/test/data": null,
  "/data/.env": "ROOT_FOLDER_HOST=/opt/ci-hub",
  "/data/apps/test/test/config.json": "{
  "id": "test",
  "urn": "test:test",
  "available": true,
  "deprecated": false,
  "port": 5145,
  "name": "test app",
  "description": "Description for test",
  "version": "1.0.0",
  "cihub_app_version": 1,
  "short_desc": "Short description for test",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/test",
  "website": "https://test.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/apps/test/test/data": null,
  "/data/apps/test/test/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "test",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/apps/test/test/docker-compose.yml": "services:
  test:
    image: nginx:latest
    restart: unless-stopped
    networks:
      test_test_network:
        gw_priority: 0
      ci-hub_network:
        gw_priority: 1
      ci-os-hub_network:
        gw_priority: 0
    environment:
      TEST: test
    ports:
      - \${APP_PORT}:80
    labels:
      ci-hub.managed: true
      ci-hub.appurn: test:test
      ci-os-hub.managed: true
      ci-os-hub.appurn: test:test
    env_file:
      - /app-data/test/test/app.env
networks:
  ci-hub_network:
    name: ci-hub_network
    external: true
  ci-os-hub_network:
    name: ci-os-hub_network
    external: true
  test_test_network:
    name: test_test_network
    external: false
    ipam:
      config:
        - subnet: 10.128.X.0/24

",
  "/data/apps/test/test/metadata/description.md": "test",
  "/data/backups": null,
  "/data/repos/test/apps/test/config.json": "{
  "id": "test",
  "urn": "test:test",
  "available": true,
  "deprecated": false,
  "port": 5145,
  "name": "test app",
  "description": "Description for test",
  "version": "1.0.0",
  "cihub_app_version": 1,
  "short_desc": "Short description for test",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/test",
  "website": "https://test.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/repos/test/apps/test/data": null,
  "/data/repos/test/apps/test/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "test",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/repos/test/apps/test/metadata/description.md": "test",
  "/data/state/seed": "seed",
}
`;

exports[`App lifecycle > update all apps > should update multiple apps that have newer versions available 1`] = `
{
  "/app-data/test/app1/app.env": "ROOT_FOLDER_HOST=/opt/ci-hub
NODE_ENV=production
DOMAIN=ci.test
LOCAL_DOMAIN=ci.lan
APP_PORT=7527
APP_URN=app1:test
APP_ID=app1-test
APP_NAME=app1
APP_STORE_ID=test
APP_DATA_DIR=/opt/ci-hub/app-data/test/app1
APP_IMAGE_TAG=2.0.0
APP_HOSTNAME=127.0.0.1
APP_INTERNAL_AUTHORITY=127.0.0.1:7527
APP_EXPOSED=false
APP_SCHEME=http
APP_PROTOCOL=http
APP_HOST=127.0.0.1
APP_DOMAIN=127.0.0.1:7527
APP_URL=http://127.0.0.1:7527
APP_BASE_URL=http://127.0.0.1:7527
APP_BASE_HOST=127.0.0.1:7527
APP_BASE_WSS_ORIGIN=ws://127.0.0.1:7527
HUB_INFERENCE_URL=http://ci-hub:3000/api/inference/v1
",
  "/app-data/test/app1/data": null,
  "/app-data/test/app2/app.env": "ROOT_FOLDER_HOST=/opt/ci-hub
NODE_ENV=production
DOMAIN=ci.test
LOCAL_DOMAIN=ci.lan
APP_PORT=7528
APP_URN=app2:test
APP_ID=app2-test
APP_NAME=app2
APP_STORE_ID=test
APP_DATA_DIR=/opt/ci-hub/app-data/test/app2
APP_IMAGE_TAG=2.0.0
APP_HOSTNAME=127.0.0.1
APP_INTERNAL_AUTHORITY=127.0.0.1:7528
APP_EXPOSED=false
APP_SCHEME=http
APP_PROTOCOL=http
APP_HOST=127.0.0.1
APP_DOMAIN=127.0.0.1:7528
APP_URL=http://127.0.0.1:7528
APP_BASE_URL=http://127.0.0.1:7528
APP_BASE_HOST=127.0.0.1:7528
APP_BASE_WSS_ORIGIN=ws://127.0.0.1:7528
HUB_INFERENCE_URL=http://ci-hub:3000/api/inference/v1
",
  "/app-data/test/app2/data": null,
  "/app-data/test/app3/app.env": "ROOT_FOLDER_HOST=/opt/ci-hub
NODE_ENV=production
DOMAIN=ci.test
LOCAL_DOMAIN=ci.lan
APP_PORT=7529
APP_URN=app3:test
APP_ID=app3-test
APP_NAME=app3
APP_STORE_ID=test
APP_DATA_DIR=/opt/ci-hub/app-data/test/app3
APP_IMAGE_TAG=4.0.0
APP_HOSTNAME=127.0.0.1
APP_INTERNAL_AUTHORITY=127.0.0.1:7529
APP_EXPOSED=false
APP_SCHEME=http
APP_PROTOCOL=http
APP_HOST=127.0.0.1
APP_DOMAIN=127.0.0.1:7529
APP_URL=http://127.0.0.1:7529
APP_BASE_URL=http://127.0.0.1:7529
APP_BASE_HOST=127.0.0.1:7529
APP_BASE_WSS_ORIGIN=ws://127.0.0.1:7529
HUB_INFERENCE_URL=http://ci-hub:3000/api/inference/v1
",
  "/app-data/test/app3/data": null,
  "/data/.env": "ROOT_FOLDER_HOST=/opt/ci-hub",
  "/data/apps/test/app1/config.json": "{
  "id": "app1",
  "urn": "app1:test",
  "available": true,
  "deprecated": false,
  "port": 7527,
  "name": "app1 app",
  "description": "Description for app1",
  "version": "2.0.0",
  "cihub_app_version": 2,
  "short_desc": "Short description for app1",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/app1",
  "website": "https://app1.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/apps/test/app1/data": null,
  "/data/apps/test/app1/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "app1",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/apps/test/app1/docker-compose.yml": "services:
  app1:
    image: nginx:latest
    restart: unless-stopped
    networks:
      app1_test_network:
        gw_priority: 0
      ci-hub_network:
        gw_priority: 1
      ci-os-hub_network:
        gw_priority: 0
    environment:
      TEST: test
    ports:
      - \${APP_PORT}:80
    labels:
      ci-hub.managed: true
      ci-hub.appurn: app1:test
      ci-os-hub.managed: true
      ci-os-hub.appurn: app1:test
    env_file:
      - /app-data/test/app1/app.env
networks:
  ci-hub_network:
    name: ci-hub_network
    external: true
  ci-os-hub_network:
    name: ci-os-hub_network
    external: true
  app1_test_network:
    name: app1_test_network
    external: false
    ipam:
      config:
        - subnet: 10.128.X.0/24

",
  "/data/apps/test/app1/metadata/description.md": "test",
  "/data/apps/test/app2/config.json": "{
  "id": "app2",
  "urn": "app2:test",
  "available": true,
  "deprecated": false,
  "port": 7528,
  "name": "app2 app",
  "description": "Description for app2",
  "version": "2.0.0",
  "cihub_app_version": 2,
  "short_desc": "Short description for app2",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/app2",
  "website": "https://app2.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/apps/test/app2/data": null,
  "/data/apps/test/app2/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "app2",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/apps/test/app2/docker-compose.yml": "services:
  app2:
    image: nginx:latest
    restart: unless-stopped
    networks:
      app2_test_network:
        gw_priority: 0
      ci-hub_network:
        gw_priority: 1
      ci-os-hub_network:
        gw_priority: 0
    environment:
      TEST: test
    ports:
      - \${APP_PORT}:80
    labels:
      ci-hub.managed: true
      ci-hub.appurn: app2:test
      ci-os-hub.managed: true
      ci-os-hub.appurn: app2:test
    env_file:
      - /app-data/test/app2/app.env
networks:
  ci-hub_network:
    name: ci-hub_network
    external: true
  ci-os-hub_network:
    name: ci-os-hub_network
    external: true
  app2_test_network:
    name: app2_test_network
    external: false
    ipam:
      config:
        - subnet: 10.128.X.0/24

",
  "/data/apps/test/app2/metadata/description.md": "test",
  "/data/apps/test/app3/config.json": "{
  "id": "app3",
  "urn": "app3:test",
  "available": true,
  "deprecated": false,
  "port": 7529,
  "name": "app3 app",
  "description": "Description for app3",
  "version": "4.0.0",
  "cihub_app_version": 4,
  "short_desc": "Short description for app3",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/app3",
  "website": "https://app3.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/apps/test/app3/data": null,
  "/data/apps/test/app3/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "app3",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/apps/test/app3/docker-compose.yml": "services:
  app3:
    image: nginx:latest
    restart: unless-stopped
    networks:
      app3_test_network:
        gw_priority: 0
      ci-hub_network:
        gw_priority: 1
      ci-os-hub_network:
        gw_priority: 0
    environment:
      TEST: test
    ports:
      - \${APP_PORT}:80
    labels:
      ci-hub.managed: true
      ci-hub.appurn: app3:test
      ci-os-hub.managed: true
      ci-os-hub.appurn: app3:test
    env_file:
      - /app-data/test/app3/app.env
networks:
  ci-hub_network:
    name: ci-hub_network
    external: true
  ci-os-hub_network:
    name: ci-os-hub_network
    external: true
  app3_test_network:
    name: app3_test_network
    external: false
    ipam:
      config:
        - subnet: 10.128.X.0/24

",
  "/data/apps/test/app3/metadata/description.md": "test",
  "/data/backups": null,
  "/data/repos/test/apps/app1/config.json": "{
  "id": "app1",
  "urn": "app1:test",
  "available": true,
  "deprecated": false,
  "port": 7527,
  "name": "app1 app",
  "description": "Description for app1",
  "version": "2.0.0",
  "cihub_app_version": 2,
  "short_desc": "Short description for app1",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/app1",
  "website": "https://app1.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/repos/test/apps/app1/data": null,
  "/data/repos/test/apps/app1/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "app1",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/repos/test/apps/app1/metadata/description.md": "test",
  "/data/repos/test/apps/app2/config.json": "{
  "id": "app2",
  "urn": "app2:test",
  "available": true,
  "deprecated": false,
  "port": 7528,
  "name": "app2 app",
  "description": "Description for app2",
  "version": "2.0.0",
  "cihub_app_version": 2,
  "short_desc": "Short description for app2",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/app2",
  "website": "https://app2.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/repos/test/apps/app2/data": null,
  "/data/repos/test/apps/app2/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "app2",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/repos/test/apps/app2/metadata/description.md": "test",
  "/data/repos/test/apps/app3/config.json": "{
  "id": "app3",
  "urn": "app3:test",
  "available": true,
  "deprecated": false,
  "port": 7529,
  "name": "app3 app",
  "description": "Description for app3",
  "version": "4.0.0",
  "cihub_app_version": 4,
  "short_desc": "Short description for app3",
  "replaces": [],
  "author": "test-author",
  "source": "https://example.com/app3",
  "website": "https://app3.example.com",
  "force_expose": false,
  "generate_vapid_keys": false,
  "categories": [
    "utilities"
  ],
  "form_fields": [],
  "https": false,
  "exposable": true,
  "no_gui": false,
  "supported_architectures": [],
  "dynamic_config": true,
  "created_at": 1769810550000,
  "updated_at": 1769810550000,
  "force_pull": false
}",
  "/data/repos/test/apps/app3/data": null,
  "/data/repos/test/apps/app3/docker-compose.json": "{
  "schemaVersion": 2,
  "services": [
    {
      "name": "app3",
      "image": "nginx:latest",
      "isMain": true,
      "internalPort": 80,
      "environment": [
        {
          "key": "TEST",
          "value": "test"
        }
      ]
    }
  ]
}",
  "/data/repos/test/apps/app3/metadata/description.md": "test",
  "/data/state/seed": "seed",
}
`;
